testsuite/tests/invalid-project/test.py
import subprocess

subprocess.call(["gpr2ls", "-Pp"])
subprocess.call(["gpr2ls", "-Pgprbuild_O629_023"])
