testsuite/tests/invalid-project/test.out
p.gpr:2:04: error: Expected Identifier, got ';'
gprls: unable to process project file p.gpr
gprbuild_O629_023.gpr:2:21: error: attribute "Runtime" is not defined
gprls: unable to process project file gprbuild_O629_023.gpr
